--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,7 @@
   "arrowParens": "avoid",
   "endOfLine": "auto",
   "tabWidth": 2,
-  "singleQuote": false
+  "singleQuote": false,
+  "semi": true
+  
 }
